Fix alignment of subscript and superscript text

--- a/src/_styles/base/_text.css
+++ b/src/_styles/base/_text.css
@@ -54,10 +54,12 @@ small {
 
 sub {
   font-variant-position: sub;
+  line-height: 0;
 }
 
 sup {
   font-variant-position: super;
+  line-height: 0;
 }
 
 :is(h1, h2, h3, h4, h5, h6) cite {
